Correct scrollbar on Sync button click, adds some css padding

--- a/assets/scss/components/_video-page.scss
+++ b/assets/scss/components/_video-page.scss
@@ -33,6 +33,7 @@
     }
     .video-edit{
         max-width: 721px;
+        padding: 5px;
     }
 }
 
